syntax = "proto3";

package ansible;

service Greeter {
    // Sends request to start cluster creation
    rpc CreateCluster (ClusterDataRequest) returns (ClusterReply) {}
}

service ServerNotification {
    // Sends request after cluster creation ends
    rpc ClusterReadyStatus (ClusterDataRequest) returns (okMessage) {}
}

message ClusterDataRequest {
    string Name = 1;
    string Type = 2;
}

message ClusterReply {
    string State = 1;
    string Template = 2;
}

message okMessage {
    string Status = 1;
}